--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,7 +15,7 @@
         border: none;
 
         @include respond(tab-land) {
-        width: 60;
+        width: 90%;
         }
 
         &--delete {
@@ -64,12 +64,15 @@
         text-shadow: $text-shadow;
 
         @include respond(phone) {
-            font-size: 1.5rem;
+            font-size: 1.7rem;
+            width: 80%;
         }
 
         &--table {
             margin: 0 auto;
             font-size: 2rem;
+
+
         }
 
         &--explanation {
