--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -7,6 +7,7 @@
     background-color: rgba($dark-blue, .9);
 
     @include respond(phone) {
-        margin: 2rem auto;
+        margin: 4rem auto;
+        width: 90%;
     }
 }
